[package]
name = "rs_img2pdf"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rs_img2pdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
fern = "0.6"
image = { version = "0.24", features = ["jpeg", "png", "webp"] }
pdf-writer = "0.9"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"

[dependencies.chrono]
version = "0.4"
features = ["clock"]